Change path for pihole ingress

--- a/cluster/apps/networking/traefik/external-services/pihole.yaml
+++ b/cluster/apps/networking/traefik/external-services/pihole.yaml
@@ -46,7 +46,7 @@ spec:
     - host: "pihole.${SECRET_DOMAIN}"
       http:
         paths:
-          - path: /
+          - path: /admin/
             pathType: Prefix
             backend:
               service:
