Change pathtype for ingress

--- a/cluster/apps/networking/traefik/external-services/pihole.yaml
+++ b/cluster/apps/networking/traefik/external-services/pihole.yaml
@@ -47,7 +47,7 @@ spec:
       http:
         paths:
           - path: /admin/
-            pathType: Prefix
+            pathType: Exact
             backend:
               service:
                 name: pihole-external
