--- a/cluster/apps/networking/traefik/external-services/zwave.yaml
+++ b/cluster/apps/networking/traefik/external-services/zwave.yaml
@@ -28,7 +28,7 @@ subsets:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nas-ingress
+  name: zwave-ingress
   namespace: networking
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
