Fix wrong host in tls section for zwave

--- a/cluster/apps/networking/traefik/external-services/zwave.yaml
+++ b/cluster/apps/networking/traefik/external-services/zwave.yaml
@@ -40,7 +40,7 @@ spec:
   ingressClassName: "traefik"
   tls:
     - hosts:
-        - "nas.${SECRET_DOMAIN}"
+        - "zwave.${SECRET_DOMAIN}"
       secretName: "zwave-ingress-tls"
   rules:
     - host: "zwave.${SECRET_DOMAIN}"
