--- a/cluster/apps/default/tandoorrecipes/ingress.yaml
+++ b/cluster/apps/default/tandoorrecipes/ingress.yaml
@@ -50,13 +50,5 @@ metadata:
   namespace: default
 spec:
   headers:
-    # accessControlAllowMethods:
-    #   - "GET"
-    #   - "OPTIONS"
-    #   - "PUT"
-    #   - "POST"
-    # accessControlAllowOriginList:
-    #   - "https://hass.${SECRET_DOMAIN}"
-    # accessControlMaxAge: 100
-    # addVaryHeader: true
-    frameDeny: false
+    customRequestHeaders:
+      X-Frame-Options: ""
