--- a/cluster/apps/default/tandoorrecipes/ingress.yaml
+++ b/cluster/apps/default/tandoorrecipes/ingress.yaml
@@ -50,5 +50,5 @@ metadata:
   namespace: default
 spec:
   headers:
-    customRequestHeaders:
+    customResponseHeaders:
       X-Frame-Options: "SAMEORIGIN"
