--- a/cluster/apps/default/default-secrets.sops.yaml
+++ b/cluster/apps/default/default-secrets.sops.yaml
@@ -5,11 +5,13 @@ metadata:
     name: default-secrets
     namespace: default
 stringData:
-    postgresql-password: ENC[AES256_GCM,data:Dldl6NIZAAu9pkK92j0HkQ==,iv:NWlEN5bRHP+XOZAMwstBAZ+80a0/148C6ZGFA36OT2k=,tag:T4ljabfodULLJBIs6aFKKg==,type:str]
-    postgresql-postgres-password: ENC[AES256_GCM,data:NhzL/z080Kt7eaGlKMxQ+w==,iv:w/3ww3khmASrY9h2tL1g53/F/zUL15UMopSaVXqBPi8=,tag:dMtO54QGIHGmZiMvOWFdoQ==,type:str]
-    secret-key: ENC[AES256_GCM,data:X13q2yhBTVy32+kmLPXp8A==,iv:1K75+hX5FtcOiDG0/4m4WbO6fClPHU7kVMgWh8Y8b90=,tag:wRJjkGGNyR+kzrkdoe5RGQ==,type:str]
-    HASS_POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:E2cexnRDitmoDgHhhESbGQ==,iv:ABT6HDaFHjx7ACgAPUgNnQsPK8EihVZTecv49IZxHCM=,tag:F3Gf8aL1Zy5YNlm0d+OPcg==,type:str]
-    HASS_LLAT: ENC[AES256_GCM,data:R0JluoJTWKZE0FsT9zh1OizAu9Q9LPLGniX9RIEcMcdG2+KC2sRGDoWlagh/5id87mKCdsEGEly3jbEbFGqqLwGdO48IbIUA+wkMuSLMLbDuBjuyzfON2pp5kJXZvhw4+rA2fdve9/tnDotOD+SdX8oW7s+QSvylQxQhKD9MtGcJvrHZNyfIaxyHSjEsLrSMAdBhgUx23Vvc5nZ2jsvrCPkx4acI9Bbf3jXux0QA7yMxWZtt0cKM,iv:irnYm4YBe5Ce94zgkvlX3L0le+xIdOhhGLxTwAsuV4A=,tag:2zn9JOs21Hp4HSGKyKMPIg==,type:str]
+    postgresql-password: ENC[AES256_GCM,data:h5g2CVS7sVExe6BSjZWgvg==,iv:7kZUGzyxZsMPMe/bbN67PRWx438HTiNRUuZuT7pCniA=,tag:igMaPQcXmrtbxN7yyxGJWA==,type:str]
+    postgresql-postgres-password: ENC[AES256_GCM,data:N0QOXBuegxEIRKtxT58sYA==,iv:eClIWlfthGMl7Fkhcqy9mviR6hyeA8SloLnhM/LisI0=,tag:UINfh7gs612+Ly7LhJkptg==,type:str]
+    secret-key: ENC[AES256_GCM,data:MGndhuhyMfIxDltTG3WNHw==,iv:OpU2hsjzhEnq0jQ1nqnglPaVBj3twNMhPTybkY5Hh3o=,tag:KixtBODil/mB5jj4hwC2AA==,type:str]
+    HASS_POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:13i9M13hCiOyZ2I6TLXTKA==,iv:jNB3pNN0qZCZuhJZ5HkaiuidOWUqaRqGsx3XPqx1s0s=,tag:ue2vqka9laESQdbBdGaFYA==,type:str]
+    HASS_LLAT: ENC[AES256_GCM,data:CilZY97wgpDIZ/zoREgclHfrOFSUysJ8Exf/ssqGHpeoCZdtZ/25M/QFt3Vt4LInB7AWsleXl0xpapj/QtpOOjWKnxN/rj0AVABJmzk+zHS6jluetZwZ4Udnwwjk3B2KZ6cy351E/nfP89736oEnNxxDqiCAxU8oQvejjJu6rOnAqUDAQR+B9T1J2LE9mdXl+UiBqngaZT7kE0ianQo5x/Ml73GpUh3jiZx2m1zoUzJIUzMreSgf,iv:UQWKqr5gXAvqQ/iuBZk1RcuGO29Zd/yF95YQzjNbAwA=,tag:XMy//NzaBmDQySnoGyq1OQ==,type:str]
+    SCRAANG_LAT: ENC[AES256_GCM,data:pRVS9JSXqSTLeg==,iv:duK759uOOvi3ynrucUs1UayOtk7tzPiFGwwM3uuEoNs=,tag:/ypJrQFZaPyJBWEG83Vbfw==,type:float]
+    SCRAANG_LON: ENC[AES256_GCM,data:urF7twkqjfbDnA==,iv:IBCH45xf1qZlY9w5nPTVj3mzqiVM5bMkmAHX4IqqaG4=,tag:i3FaPjSuZ0Zk/O12v92WlA==,type:float]
 sops:
     kms: []
     gcp_kms: []
@@ -19,14 +21,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaS0NKVlJ0RVhWRHVyWFN5
-            eUJmbjVkYm80RHR1MVllZTFqNHcydG9QYmpjCk5ZUDdrLzE2L2RPaWJVQTI2L1Zt
-            UXZjYmxjWGYvQVZVM2dBL2tEVlJ3ZGMKLS0tIE9LeW5zM0YrNGQ5dUJGZ3h0UUdh
-            UTZLaHl6NEQwT2UraldoRnVhdm1PUGMKtmOdR1Mq23GGL5sQU6C9GfkIkfBYPyZ5
-            4E8mKttjkL5dKAk7PkqMPiC3kOnJM0K3rnvQ3Xs8kH+2Cs3Rvz4y6g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWU1V3em53c3R3c2RjVE9x
+            cThMVmpGZXhadVJCQVlXdkhRUDZIWHY4SFZjCm0vVnh4QmtuRlQyay83MkpuOWNy
+            ZUIzS2h4YWp1SmlqMnM2QVUzZDM3Rm8KLS0tIEt0OW5VZlNtenY3U09RQTNUZHV3
+            SFFocjVrWDMzRDExZVpJckhYU0VFRE0K04rMSkeBtHuvkb+adtBWDf0efDYHHYk6
+            si89CVXtBPRxuSb86eaF+6fd229JHcH4Nwc0szg+aKke9GyYfaR5Lg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-21T15:09:43Z"
-    mac: ENC[AES256_GCM,data:XdDgGRQbk4iX4zkv3PybtXQBPwYGVbUstmcuAsM+WTElH+zsocHr/GElBbqSGjj+DZkKk1FJTEZdRhEj1RwMBAbkDgZoHP4NGr7FLvL4Dqt4b9D5aAtPzFNOh7Jrr81/C535zbjyRqbGTEIYgVaP5Sc+74D12kx1OkGJQq0vGqc=,iv:ThxsWa1nB19f7Qup4W70h2kiuDg37S1+pr1F3ZdWvPE=,tag:4PZzZ7hxswsCoZNFXlXojw==,type:str]
+    lastmodified: "2022-04-18T14:29:39Z"
+    mac: ENC[AES256_GCM,data:ysIxiBUxeJ+JnOqjhGb6gsER2mOxISTLpXxKN1ffQ2xakz+2TB+7lBccQfwssctOC/HSf6sAtLdPBNsMoD7c/q9GixhGRnRLH7v45pjicxWoukGGjKJfApyWORtOD9nznoNJ+fG0PN96feD6lCUvb36tQMPnCnBjlpUT51SwsZ8=,iv:PNuQ1Gd4Chf5S9t/uoFt1BXTdNe8srZ43E2NsaoMKUE=,tag:HTWTbpn64HswdHxBS3oQVA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
