--- a/cluster/apps/default/default-secrets.sops.yaml
+++ b/cluster/apps/default/default-secrets.sops.yaml
@@ -5,13 +5,13 @@ metadata:
     name: default-secrets
     namespace: default
 stringData:
-    postgresql-password: ENC[AES256_GCM,data:h5g2CVS7sVExe6BSjZWgvg==,iv:7kZUGzyxZsMPMe/bbN67PRWx438HTiNRUuZuT7pCniA=,tag:igMaPQcXmrtbxN7yyxGJWA==,type:str]
-    postgresql-postgres-password: ENC[AES256_GCM,data:N0QOXBuegxEIRKtxT58sYA==,iv:eClIWlfthGMl7Fkhcqy9mviR6hyeA8SloLnhM/LisI0=,tag:UINfh7gs612+Ly7LhJkptg==,type:str]
-    secret-key: ENC[AES256_GCM,data:MGndhuhyMfIxDltTG3WNHw==,iv:OpU2hsjzhEnq0jQ1nqnglPaVBj3twNMhPTybkY5Hh3o=,tag:KixtBODil/mB5jj4hwC2AA==,type:str]
-    HASS_POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:13i9M13hCiOyZ2I6TLXTKA==,iv:jNB3pNN0qZCZuhJZ5HkaiuidOWUqaRqGsx3XPqx1s0s=,tag:ue2vqka9laESQdbBdGaFYA==,type:str]
-    HASS_LLAT: ENC[AES256_GCM,data:CilZY97wgpDIZ/zoREgclHfrOFSUysJ8Exf/ssqGHpeoCZdtZ/25M/QFt3Vt4LInB7AWsleXl0xpapj/QtpOOjWKnxN/rj0AVABJmzk+zHS6jluetZwZ4Udnwwjk3B2KZ6cy351E/nfP89736oEnNxxDqiCAxU8oQvejjJu6rOnAqUDAQR+B9T1J2LE9mdXl+UiBqngaZT7kE0ianQo5x/Ml73GpUh3jiZx2m1zoUzJIUzMreSgf,iv:UQWKqr5gXAvqQ/iuBZk1RcuGO29Zd/yF95YQzjNbAwA=,tag:XMy//NzaBmDQySnoGyq1OQ==,type:str]
-    SCRAANG_LAT: ENC[AES256_GCM,data:pRVS9JSXqSTLeg==,iv:duK759uOOvi3ynrucUs1UayOtk7tzPiFGwwM3uuEoNs=,tag:/ypJrQFZaPyJBWEG83Vbfw==,type:float]
-    SCRAANG_LON: ENC[AES256_GCM,data:urF7twkqjfbDnA==,iv:IBCH45xf1qZlY9w5nPTVj3mzqiVM5bMkmAHX4IqqaG4=,tag:i3FaPjSuZ0Zk/O12v92WlA==,type:float]
+    postgresql-password: ENC[AES256_GCM,data:db8ATAEEQ+GA1nzOhg5umg==,iv:kpqQOHNDcLLL93Hq7ErC0NVBEo41I7VXuYasyaro350=,tag:9Agsj9ISM6d2oAyqV065+Q==,type:str]
+    postgresql-postgres-password: ENC[AES256_GCM,data:KlBYnnSwM2hUyXjilRyOUQ==,iv:67p+87k4c5K0wTyxON31bLr8pSk1maiFgZ5Le/BLNJM=,tag:tR8pV9f/IlSTSRV1v4jx+w==,type:str]
+    secret-key: ENC[AES256_GCM,data:C41TGjINUCoU8QvuDvwROQ==,iv:nbW0w4tJbr0YkvdVX8WQQVn1AOIw0xbk3l7goffrW/E=,tag:tASvetso34A6dW6jTpB6kA==,type:str]
+    HASS_POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:f9IBrtJH6Y1KM6VmbbzmOg==,iv:2fnU9xYhIVgdMYTGTdIb+HpqaHx5ADg+ZeoTzHy57SY=,tag:h7B5TI7oQ2cgsp2IBGSD1w==,type:str]
+    HASS_LLAT: ENC[AES256_GCM,data:UfQIQv3/UnqJkZzaiOQB3bDoda7KUWQe7mgX2S3Gaktp8qrEe92Wmld/CZUv4n9Zfdlqg434JOtONcezBniSMXtqffL4RHHZMGvyKyMx253hhSZFueafCmxsQ0WqCZr0q/h8G5cscIQOL5OMRgf91Lcj+8NjpDxMAerDX4tqOobq/1zLePykr+WJL89FejkbE0gc5kc1RzxD9WPLi+QbBg3A/60YfVoaRa72AXI+GXr6wvnacZBh,iv:8iWeehLea0OGyT7qIkp0Qct+b+pxXB1o+lrmNkp4C0c=,tag:DMvDyBcBuI3h/MQos6q91Q==,type:str]
+    SCRAANG_LAT: ENC[AES256_GCM,data:RgwMV1oXx4ssXQ==,iv:KcEyAEKH8r8LxfP1qAndloyjCf13WTOH35UhIsAYB0g=,tag:aUDvdUnnGB2xQPuxIb52fQ==,type:str]
+    SCRAANG_LON: ENC[AES256_GCM,data:/e1G70F5FuNeTA==,iv:a4nT07JR4F69UIU3AwY/FBk8tnp16ezc4cckPJjWmdE=,tag:GeuSQVVkjLUl0n9CaDI1Fg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,14 +21,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWU1V3em53c3R3c2RjVE9x
-            cThMVmpGZXhadVJCQVlXdkhRUDZIWHY4SFZjCm0vVnh4QmtuRlQyay83MkpuOWNy
-            ZUIzS2h4YWp1SmlqMnM2QVUzZDM3Rm8KLS0tIEt0OW5VZlNtenY3U09RQTNUZHV3
-            SFFocjVrWDMzRDExZVpJckhYU0VFRE0K04rMSkeBtHuvkb+adtBWDf0efDYHHYk6
-            si89CVXtBPRxuSb86eaF+6fd229JHcH4Nwc0szg+aKke9GyYfaR5Lg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRTkxIR0wzYy8yN2cxVUFq
+            M2UrQlNpSmU1b1R2R1JmZ08wUkJzSVRHSFZRCkxrZTIwTFhVckJ1ZktlSVNkSU42
+            UjlucEJkTWNxS2FjTFovRnNsbm05TU0KLS0tIFFaSmZ5RTlodjNreTdBdnNGbnB3
+            VzRxRXppVVhxSVVQSk4vRVNJWWEzOUUKfaj5y/HSQhNVpNwXSeNYjgutHopR29gQ
+            048RdlI1cCarmCSthIAdJd7Z+HB4zGyA7cEnJsfb/ayvCXyVxWEg/g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-18T14:29:39Z"
-    mac: ENC[AES256_GCM,data:ysIxiBUxeJ+JnOqjhGb6gsER2mOxISTLpXxKN1ffQ2xakz+2TB+7lBccQfwssctOC/HSf6sAtLdPBNsMoD7c/q9GixhGRnRLH7v45pjicxWoukGGjKJfApyWORtOD9nznoNJ+fG0PN96feD6lCUvb36tQMPnCnBjlpUT51SwsZ8=,iv:PNuQ1Gd4Chf5S9t/uoFt1BXTdNe8srZ43E2NsaoMKUE=,tag:HTWTbpn64HswdHxBS3oQVA==,type:str]
+    lastmodified: "2022-04-18T14:35:29Z"
+    mac: ENC[AES256_GCM,data:+08YdAZuYTu78HDmn4i17kapA2usPQRTBb1YyHrRcDqgeCtvH1uoutX0E+C3r+4iSkOwLXlsLZfiEfMmD0QPDKMC6SE3geeCizvSW3vpuiErrz8ettHnGuPXrwukiMUjsRss6tyEBLvh7H3tM+xBz+B8HKI2lB80Lfowzv6mKAI=,iv:nNW5UkP3srORui3AAVMAFSc4d1PKbfB44a6Mglnh26c=,tag:2WzS5mPIAr6TzqDDdOTFmg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
