--- a/cluster/apps/default/scraang/deployment.yaml
+++ b/cluster/apps/default/scraang/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: scraang-scraper
-        image: nliakm/scraang-scraper:latest
+        image: nliakm/scraang-scraper:0.1
         imagePullPolicy: IfNotPresent
         # command:
         #   - /root/scraper.py
@@ -43,7 +43,7 @@ spec:
                 name: default-secrets
                 key: SCRAANG_LON
       - name: scraang-flask
-        image: nliakm/scraang-flask:latest
+        image: nliakm/scraang-flask:0.1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
