--- a/cluster/apps/default/scraang/service.yaml
+++ b/cluster/apps/default/scraang/service.yaml
@@ -11,6 +11,7 @@ spec:
   selector:
     app: scraang
     tier: frontend
+    environment: production
   ports:
   - port: 5000
     targetPort: http
