--- a/cluster/apps/default/scraang/deployment.yaml
+++ b/cluster/apps/default/scraang/deployment.yaml
@@ -9,8 +9,8 @@ metadata:
     environment: production
 spec:
   replicas: 1
-  strategy:
-    type: Recreate  
+  # strategy:
+  #   type: Recreate  
   selector:
     matchLabels:
       app: scraang
