--- a/cluster/apps/default/scraang/deployment.yaml
+++ b/cluster/apps/default/scraang/deployment.yaml
@@ -9,12 +9,12 @@ metadata:
     environment: production
 spec:
   replicas: 1
-  # strategy:
-  #   type: Recreate
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: scraang
-      #environment: production
+      environment: production
   template:
     metadata:
       labels:
