--- a/cluster/apps/default/scraang/ingress.yaml
+++ b/cluster/apps/default/scraang/ingress.yaml
@@ -1,36 +1,29 @@
 ---
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  annotations:
-    kubernetes.io/ingress.class: "traefik"
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
-    hajimari.io/enable: "true"
-    hajimari.io/icon: "tag"
   name: scraang
   namespace: default
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
+    hajimari.io/appName: "traefik"
+    hajimari.io/enable: "true"
+    hajimari.io/icon: "tag"
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
 spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: Host(`scraang.${SECRET_DOMAIN}`) && PathPrefix(`/`)
-      kind: Rule
-      middlewares:
-        - name: scraang-headers
-      services:
-        - kind: Service
-          name: scraang
-          namespace: default
-          port: 5000
+  ingressClassName: "traefik"
   tls:
-    secretName: "scraang-tls-secret"
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: scraang-headers
-  namespace: default
-spec:
-  headers:
-    customResponseHeaders:
-      X-Frame-Options: ""
+    - hosts:
+        - "scraang.${SECRET_DOMAIN}"
+      secretName: "scraang-web-tls"
+  rules:
+    - host: "scraang.${SECRET_DOMAIN}"
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: scraang
+                port:
+                  number: 5000
