--- a/cluster/apps/default/scraang/deployment.yaml
+++ b/cluster/apps/default/scraang/deployment.yaml
@@ -37,7 +37,7 @@ spec:
           - name: MIN
             value: "59"
           - name: MARKETNAMES
-            value: "REWE,Penny-Markt"
+            value: "REWE,Penny-Markt,EDEKA"
           - name: LATITUDE
             valueFrom:
               secretKeyRef:
