--- a/cluster/apps/default/default-secrets.sops.yaml
+++ b/cluster/apps/default/default-secrets.sops.yaml
@@ -5,13 +5,14 @@ metadata:
     name: default-secrets
     namespace: default
 stringData:
-    postgresql-password: ENC[AES256_GCM,data:db8ATAEEQ+GA1nzOhg5umg==,iv:kpqQOHNDcLLL93Hq7ErC0NVBEo41I7VXuYasyaro350=,tag:9Agsj9ISM6d2oAyqV065+Q==,type:str]
-    postgresql-postgres-password: ENC[AES256_GCM,data:KlBYnnSwM2hUyXjilRyOUQ==,iv:67p+87k4c5K0wTyxON31bLr8pSk1maiFgZ5Le/BLNJM=,tag:tR8pV9f/IlSTSRV1v4jx+w==,type:str]
-    secret-key: ENC[AES256_GCM,data:C41TGjINUCoU8QvuDvwROQ==,iv:nbW0w4tJbr0YkvdVX8WQQVn1AOIw0xbk3l7goffrW/E=,tag:tASvetso34A6dW6jTpB6kA==,type:str]
-    HASS_POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:f9IBrtJH6Y1KM6VmbbzmOg==,iv:2fnU9xYhIVgdMYTGTdIb+HpqaHx5ADg+ZeoTzHy57SY=,tag:h7B5TI7oQ2cgsp2IBGSD1w==,type:str]
-    HASS_LLAT: ENC[AES256_GCM,data:UfQIQv3/UnqJkZzaiOQB3bDoda7KUWQe7mgX2S3Gaktp8qrEe92Wmld/CZUv4n9Zfdlqg434JOtONcezBniSMXtqffL4RHHZMGvyKyMx253hhSZFueafCmxsQ0WqCZr0q/h8G5cscIQOL5OMRgf91Lcj+8NjpDxMAerDX4tqOobq/1zLePykr+WJL89FejkbE0gc5kc1RzxD9WPLi+QbBg3A/60YfVoaRa72AXI+GXr6wvnacZBh,iv:8iWeehLea0OGyT7qIkp0Qct+b+pxXB1o+lrmNkp4C0c=,tag:DMvDyBcBuI3h/MQos6q91Q==,type:str]
-    SCRAANG_LAT: ENC[AES256_GCM,data:RgwMV1oXx4ssXQ==,iv:KcEyAEKH8r8LxfP1qAndloyjCf13WTOH35UhIsAYB0g=,tag:aUDvdUnnGB2xQPuxIb52fQ==,type:str]
-    SCRAANG_LON: ENC[AES256_GCM,data:/e1G70F5FuNeTA==,iv:a4nT07JR4F69UIU3AwY/FBk8tnp16ezc4cckPJjWmdE=,tag:GeuSQVVkjLUl0n9CaDI1Fg==,type:str]
+    postgresql-password: ENC[AES256_GCM,data:kdmKF1IX27pGgcqUusZJ9w==,iv:7qylPwDguYOzTCc5uxk2ieWA8vPuiwZ+OEXsb0Uuvt8=,tag:ssZl9XdBinDhkNHF+5p1cw==,type:str]
+    postgresql-postgres-password: ENC[AES256_GCM,data:m+NtHhYn1WpIDGqFjLfhEA==,iv:4eqIPyaHBVIvIa79u4oHKZstA8Bfgq+W3aVM7PF5B7M=,tag:DTFwXyuFOLJ0w5TM+ZDToQ==,type:str]
+    secret-key: ENC[AES256_GCM,data:LGAeZoWBSORZ/nNt5E2teQ==,iv:4tx3VfgYGrgIo+ss4aUjBImjn4q1agmqv9psYNMqJKc=,tag:+KAstNsJ5aAHfWVf9NmbLQ==,type:str]
+    HASS_POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:C6fjUEWBAoXCNxDprTS4gg==,iv:1kF5SlpqlcKc0L0x8E7AAXRbtqC5cBEcv+xD7K0hmtI=,tag:qx2uacgxgms+TxGNhoRv4A==,type:str]
+    HASS_LLAT: ENC[AES256_GCM,data:Nn8PhfhrhYuOvbzeEAYGLBUcYTxB2QgS6NyBaWlBzI5nukXPD0aI0YEte70Ha+9DZkj5giSke6SLhK/6Ah+5oDGcDTmdgkjNltngmh217EQRGxQG7F9Eyr8E1hPBLfN2txp2ulUHPUr3f9YphFNcv/WwDrB8Li6CPGLq9r2CQ/GX7oqXB8ucszow5h8f0ijuefFUCdumdujLu6ycECtP0TAhpXv2xPZRgB01cCa9u/D4AVKvcya/,iv:4w7+deOBSvzvkVX0rfhVXiDMQ15gaysEFpa/ZfPkmyo=,tag:uWwSs0xVDE/Hr9sHm//OSg==,type:str]
+    HASS_BEARER_TOKEN: ENC[AES256_GCM,data:jldvRcISEmNj4TJvObdUFPI7mstb3/SBg/FE/sL4OlzWZ4vjwMCOZl4JaZHsJHCL1LVPE7PMgqnyHPXC92RGQM46o173Ur3VKHMp6pTh/ZyXFTPHmjQw5fvZssc2nZ294yt0RJTxS4Mc/QS4P5hCHAXkb5qZOscNI5qElH1wHeuLdTa74cX1gJSX2HkTETOy4zd2FloUXZtWh+c+mKfAPmYCbw0UVSUMH/xhzZIgZKCkAflvifAS,iv:7s97204PfZrC82Ol2JV/D1h4IOPQ7HhOBKAtNrFDSuE=,tag:N5ZO30mMR+vQh5DzXW3rEg==,type:str]
+    SCRAANG_LAT: ENC[AES256_GCM,data:f2Y+h3Xp+QTFzw==,iv:GF3JmCmAFTLQBdP9/dVd6x64fDwXMF0U6yrO7PGYOxY=,tag:S5PBj0AGJDX6ZiMsaDGdaw==,type:str]
+    SCRAANG_LON: ENC[AES256_GCM,data:AzfsP1fFom0dfQ==,iv:moW12vSftREH+dSwpbNIfX5RDsOrOqg/JqPdXpa5fV4=,tag:ikfxzcHY7Cqba9eGAEnuyg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,14 +22,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRTkxIR0wzYy8yN2cxVUFq
-            M2UrQlNpSmU1b1R2R1JmZ08wUkJzSVRHSFZRCkxrZTIwTFhVckJ1ZktlSVNkSU42
-            UjlucEJkTWNxS2FjTFovRnNsbm05TU0KLS0tIFFaSmZ5RTlodjNreTdBdnNGbnB3
-            VzRxRXppVVhxSVVQSk4vRVNJWWEzOUUKfaj5y/HSQhNVpNwXSeNYjgutHopR29gQ
-            048RdlI1cCarmCSthIAdJd7Z+HB4zGyA7cEnJsfb/ayvCXyVxWEg/g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBZTJxTXU0SFpVVTl1dmVo
+            QkQ1MFBPM09WcTAvdlU2UjZYRzJyZG5jV0hVCno0ZGRsZ2Y5UWIwQ3piTGU4Ty90
+            ZWRSUEgwUElBZW5NKzRRUGR6TFdsZDAKLS0tIDJMVnV5dGxsSTRtVEwrcmt4Y0xh
+            aUw4azF4OGdNMys5ZGxMR3hQZGhnOTAKNHRLiGW4rkABmiIjHiooAd1VyBYnYBnu
+            cDTu84KJLhT8z8mR2vcjuhUHgb08apLwDZDNdQz+VuGaUX8BoaecAg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-18T14:35:29Z"
-    mac: ENC[AES256_GCM,data:+08YdAZuYTu78HDmn4i17kapA2usPQRTBb1YyHrRcDqgeCtvH1uoutX0E+C3r+4iSkOwLXlsLZfiEfMmD0QPDKMC6SE3geeCizvSW3vpuiErrz8ettHnGuPXrwukiMUjsRss6tyEBLvh7H3tM+xBz+B8HKI2lB80Lfowzv6mKAI=,iv:nNW5UkP3srORui3AAVMAFSc4d1PKbfB44a6Mglnh26c=,tag:2WzS5mPIAr6TzqDDdOTFmg==,type:str]
+    lastmodified: "2022-04-25T08:34:22Z"
+    mac: ENC[AES256_GCM,data:jPga3jaKL3cFLmNjw+iEcMENxCXTDwjPXeR+VVuhEVfZ4+YGLHk33qQ8hnNK+7uBM2L/eLsEMR6+f5+4uMW4ynQ07odP6AEVS2mRX+JuPdWm0EIry99Ojuidn5dy/LYpMfyJvbMsHgY0RmWYS1fX/o2DdlBhc6LbkiPelQIJLkU=,iv:m+9/Ao4+fSfmG5XfbrOTjPAk+URHEBpmGSihH/hGxVY=,tag:DsmFtiUMM4kqA8Kzr0UDEA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
