--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -27,7 +27,13 @@ spec:
       main:
         ports:
           http:
-            port: 8123      
+            port: 8123
+
+    # -- Enable devices to be discoverable
+    hostNetwork: true
+    # -- When hostNetwork is true set dnsPolicy to ClusterFirstWithHostNet
+    dnsPolicy: ClusterFirstWithHostNet
+
     ingress:
       main:
         enabled: true
