--- a/cluster/apps/mondoo-operator/mondoo-operator/helm-release.yaml
+++ b/cluster/apps/mondoo-operator/mondoo-operator/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       # renovate: registryUrl=https://mondoohq.github.io/mondoo-operator
-      chart: mondoo-operator
+      chart: mondoo/mondoo-operator
       version: 0.4.2
       sourceRef:
         kind: HelmRepository
