Disable mondoo-operator for now

--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - default
   - kube-system
-  - mondoo-operator
+#  - mondoo-operator
   - monitoring
   - networking
   - system-upgrade
