--- a/cluster/apps/default/tandoorrecipes/ingress.yaml
+++ b/cluster/apps/default/tandoorrecipes/ingress.yaml
@@ -42,6 +42,9 @@ spec:
           port: 80
   tls:
     secretName: "recipes-tls-secret"
+    certResolver: letsencrypt-production
+    domains:
+    - main: "rezepte.${SECRET_DOMAIN}"
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
