--- a/cluster/apps/default/tandoorrecipes/ingress.yaml
+++ b/cluster/apps/default/tandoorrecipes/ingress.yaml
@@ -1,57 +1,41 @@
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: "traefik"
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
     hajimari.io/icon: "chef-hat"
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"    
   name: recipes
   namespace: default
 spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: Host(`rezepte.${SECRET_DOMAIN}`) && PathPrefix(`/`)
-      kind: Rule
-      middlewares:
-        - name: recipes-headers
-      services:
-        - kind: Service
-          name: recipes
-          namespace: default
-          port: 8080
-    - match: Host(`rezepte.${SECRET_DOMAIN}`) && PathPrefix(`/media`)
-      kind: Rule
-      middlewares:
-        - name: recipes-headers
-      services:
-        - kind: Service
-          name: recipes
-          namespace: default
-          port: 80
-    - match: Host(`rezepte.${SECRET_DOMAIN}`) && PathPrefix(`/static`)
-      kind: Rule
-      middlewares:
-        - name: recipes-headers
-      services:
-        - kind: Service
-          name: recipes
-          namespace: default
-          port: 80
   tls:
+  - hosts:
+     - "rezepte.${SECRET_DOMAIN}"
     secretName: "recipes-tls-secret"
-    certResolver: letsencrypt-production
-    domains:
-    - main: "rezepte.${SECRET_DOMAIN}"
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: recipes-headers
-  namespace: default
-spec:
-  headers:
-    customResponseHeaders:
-      X-Frame-Options: ""
+  rules:
+  - host: "rezepte.${SECRET_DOMAIN}"
+    http:
+      paths:
+      - backend:
+          service:
+            name: recipes
+            port:
+              number: 8080
+        path: /
+        pathType: Prefix
+      - backend:
+          service:
+            name: recipes
+            port:
+              number: 80
+        path: /media
+        pathType: Prefix
+      - backend:
+          service:
+            name: recipes
+            port:
+              number: 80
+        path: /static
+        pathType: Prefix
