Set X-Frame-Options to allow

--- a/cluster/apps/default/tandoorrecipes/ingress.yaml
+++ b/cluster/apps/default/tandoorrecipes/ingress.yaml
@@ -8,6 +8,7 @@ metadata:
     hajimari.io/icon: "chef-hat"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
     ingress.kubernetes.io/custom-frame-options-value: ""
+    ingress.kubernetes.io/frame-deny: "false"
   name: recipes
   namespace: default
 spec:
