Switch to ingress

--- a/cluster/apps/default/scraang/kustomization.yaml
+++ b/cluster/apps/default/scraang/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
   - config-pvc.yaml
   - deployment.yaml
   - service.yaml
-#  - ingress.yaml
-  - ingressroute.yaml
+  - ingress.yaml
+#  - ingressroute.yaml
