--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -47,6 +47,8 @@ spec:
         ingressClassName: "traefik"
         annotations:
           cert-manager.io/cluster-issuer: "letsencrypt-production"
+          cert-manager.io/acme-challenge-type: dns01
+          cert-manager.io/acme-dns01-provider: cloudflare
           hajimari.io/enable: "false"
           hajimari.io/icon: "weather-sunset"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
@@ -58,7 +60,7 @@ spec:
         tls:
           - hosts:
               - "start.${SECRET_DOMAIN}"
-            secretName: "hajimari-tls-secret"
+            secretName: "tls-wildcard-secret"
     persistence:
       data:
         enabled: true
