Adjust wildcard config

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -59,7 +59,7 @@ spec:
                 pathType: Prefix
         tls:
           - hosts:
-              - "start.${SECRET_DOMAIN}"
+              - "*.${SECRET_DOMAIN}"
             secretName: "tls-wildcard-secret"
     persistence:
       data:
