--- a/cluster/core/cert-manager/letsencrypt-wildcard.yaml
+++ b/cluster/core/cert-manager/letsencrypt-wildcard.yaml
@@ -3,11 +3,11 @@ apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: letsencript-wildcard-cert
+  namespace: default
 spec:
   secretName: tls-wildcard-secret
   issuerRef: 
-    kind: Issuer
+    kind: ClusterIssuer
     name: letsencrypt-production
-  commonName: "*.${SECRET_DOMAIN}"
   dnsNames:
     - "*.${SECRET_DOMAIN}"
