--- a/cluster/apps/default/scraang/deployment.yaml
+++ b/cluster/apps/default/scraang/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       restartPolicy: Always    
       containers:
       - name: scraper
-        image: nliakm/scraang-scraper:latest
+        image: nliakm/scraang-scraper:stable
         imagePullPolicy: Always
         volumeMounts:
           - mountPath: /var/offers
@@ -49,7 +49,7 @@ spec:
                 name: default-secrets
                 key: SCRAANG_LON
       - name: flask
-        image: nliakm/scraang-flask:latest
+        image: nliakm/scraang-flask:stable
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
