--- a/cluster/apps/argocd/argocd/kustomization.yaml
+++ b/cluster/apps/argocd/argocd/kustomization.yaml
@@ -2,4 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - argo-cd
+  - helm-release.yaml
+  - argocd-secrets.yaml
