--- a/cluster/base/flux-system/charts/helm/argocd-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/argocd-charts.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: argo-cd-charts
+  name: argocd-charts
   namespace: flux-system
 spec:
   interval: 15m
