--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - argo-cd-charts.yaml
+  - argocd-charts.yaml
   - authentik-charts.yaml
   - bitnami-charts.yaml
   - deliveryhero-charts.yaml
