--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - argo-cd.yaml
+  - argocd.yaml
   - cert-manager.yaml
   - metallb-system.yaml
   - monitoring.yaml
